--- a/pages/index.jade
+++ b/pages/index.jade
@@ -6,7 +6,10 @@ html
       * { margin: 0; padding: 0; box-sizing: border-box; }
 
       body { overflow: hidden; }
-    script(src='pulsar.js')    
 
+    script.
+      var pulsarConfig = !{config};
+
+    script(src='pulsar.js')
 
   body
