Make it clear that the initial pulsar configuration cannot be used other than initially

--- a/pages/index.jade
+++ b/pages/index.jade
@@ -8,7 +8,7 @@ html
       body { overflow: hidden; }
 
     script.
-      var pulsarConfig = !{config};
+      var pulsarInitConfig = !{config};
 
     script(src='pulsar.js')
 
